--- a/Moja_Biblioteczka_JavaFX/pom.xml
+++ b/Moja_Biblioteczka_JavaFX/pom.xml
@@ -3,4 +3,34 @@
   <groupId>Moja_Biblioteczka_JavaFX</groupId>
   <artifactId>Moja_Biblioteczka_JavaFX</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+<build>
+<plugins>
+
+
+    <plugin>
+     <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-shade-plugin</artifactId>
+      <version>3.1.0</version>
+     <executions>
+       <execution>
+         <phase>package</phase>
+         <goals>
+            <goal>shade</goal>
+        </goals>
+        <configuration>
+          <transformers>
+            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+              <mainClass>App.MainApp</mainClass>
+            </transformer>
+          </transformers>
+        </configuration>
+      </execution>
+    </executions>
+  </plugin>
+</plugins>
+
+</build>
+
+
+
 </project>
